# bracio

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml
python/bracio/: __init__.py
python/tests/: test_all.py  test_io.py
src/: event_loop.rs  io.rs  lib.rs  messages.rs
