[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "bracio"
description = "High-performance Rust-backed asyncio event loop powered by Tokio"
long-description = "Bracio is an asyncio event loop implementation for Python, built on top of the Tokio runtime in Rust. It aims to provide high performance and low latency for asynchronous applications by leveraging Rust's safety and concurrency features."
requires-python = ">=3.11"
version = "0.0.1"
license = { file = "LICENSE" }

authors = [
    { name = "Nate Bracy", email = "nate@bracy.dev" }
]
keywords = ["asyncio", "event-loop", "tokio", "rust"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]

[project.urls]
repository = "https://github.com/servusdei2018/bracio"

[tool.maturin]
python-source = "python"

[dependency-groups]
optional = [
    "ruff>=0.14.10",
]
